--- a/template/output.html
+++ b/template/output.html
@@ -439,7 +439,7 @@
          border="0" cellpadding="0" cellspacing="0" role="presentation" style="" width="100%"
       >
         <tbody>
-          <table style="margin-top: 6px;" cellpadding="0" cellspacing="0" border="0">
+          <table cellpadding="0" cellspacing="0" border="0" style="margin: 12px 0 4px;">
             <tr>
                 <td class="service-tag">
                   <span>International</span>
@@ -511,7 +511,7 @@
          border="0" cellpadding="0" cellspacing="0" role="presentation" style="" width="100%"
       >
         <tbody>
-          <table cellpadding="0" cellspacing="0" border="0" style="margin: 8px 0 4px;">
+          <table cellpadding="0" cellspacing="0" border="0" style="margin-top: 6px;">
             <tr>
                 <td style="white-space: nowrap; padding-right: 8px;">
                   <a href="https://www.google.com/maps/place/Gonzalo+Law+Miami/@25.7612322,-80.1936558,17z/data&#x3D;!3m2!4b1!5s0x88db8059298cca51:0x3baf46daaa122580!4m6!3m5!1s0x88d9b755508c5a73:0x7b86035a9f7e601c!8m2!3d25.7612274!4d-80.1910809!16s%2Fg%2F11rmq9hk5z?entry&#x3D;ttu&amp;g_ep&#x3D;EgoyMDI1MDMyMy4wIKXMDSoASAFQAw%3D%3D" class="location-link">
@@ -573,7 +573,7 @@
           <tbody>
             <tr>
               <td
-                 style="direction:ltr;font-size:0px;padding:0;padding-top:12px;text-align:left;"
+                 style="direction:ltr;font-size:0px;padding:0;padding-top:8px;text-align:left;"
               >
                 <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><![endif]-->
       <!-- Awards Column -->
