--- a/template/input-v3.mjml
+++ b/template/input-v3.mjml
@@ -1,5 +1,6 @@
 <!-- 
 Version 3:
+- Backgrounds Removed
  -->
 
 <mjml>
@@ -29,7 +30,8 @@ Version 3:
 
       <!-- Disclaimer Section -->
       <!-- Warning background color: -->
-      <mj-class name="disclaimer-section" background-color="hsl(35, 94%, 90%)" padding="0" />
+      <!-- <mj-class name="disclaimer-section" background-color="hsl(35, 94%, 90%)" padding="0" /> -->
+      <mj-class name="disclaimer-section" padding="0" />
 
       <mj-class name="disclaimer" font-size="10px" color="hsl(35, 94%, 5%)" line-height="1.25" letter-spacing="0.02em" font-style="italic" padding="4px 6px" />
     </mj-attributes>
@@ -62,7 +64,7 @@ Version 3:
       }
 
       td.service-tag span {
-        background-color: #F5F5F5;
+        /* background-color: #F5F5F5; */
         padding: 2px 6px;
         color: #2B2147;
       }
@@ -76,8 +78,8 @@ Version 3:
 
 
       .badge-cell {
-        background-color: #F5F5F5;
-        border: 1px solid #E5E5E5;
+        /* background-color: #F5F5F5; */
+        /* border: 1px solid #E5E5E5; */
         border-radius: 2px;
         padding: 2px 4px 2px 7px;
         white-space: nowrap;
@@ -87,10 +89,10 @@ Version 3:
       }
 
       /* Media Column */
-      /* ? Different background color and border color to indicate media links */
+      /* ? Different border color to indicate media links */
       .media-column .badge-cell {
-        background-color: hsl(219, 60%, 95.50%);
-        border: 1px solid hsl(219, 60%, 80.00%);
+        /* background-color: hsl(219, 60%, 95.50%); */
+        /* border: 1px solid hsl(219, 60%, 80.00%); */
       }
 
 
@@ -228,7 +230,7 @@ Version 3:
     </mj-section>
 
     <!-- Locations -->
-    <mj-section>
+    <mj-section padding-left="6px">
       <mj-column>
         <mj-raw>
           <table cellpadding="0" cellspacing="0" border="0" style="margin-top: 6px;">
