--- a/template/output.html
+++ b/template/output.html
@@ -93,7 +93,7 @@
       }
 
       td.service-tag span {
-        background-color: #F5F5F5;
+        /* background-color: #F5F5F5; */
         padding: 2px 6px;
         color: #2B2147;
       }
@@ -107,8 +107,8 @@
 
 
       .badge-cell {
-        background-color: #F5F5F5;
-        border: 1px solid #E5E5E5;
+        /* background-color: #F5F5F5; */
+        /* border: 1px solid #E5E5E5; */
         border-radius: 2px;
         padding: 2px 4px 2px 7px;
         white-space: nowrap;
@@ -118,10 +118,10 @@
       }
 
       /* Media Column */
-      /* ? Different background color and border color to indicate media links */
+      /* ? Different border color to indicate media links */
       .media-column .badge-cell {
-        background-color: hsl(219, 60%, 95.50%);
-        border: 1px solid hsl(219, 60%, 80.00%);
+        /* background-color: hsl(219, 60%, 95.50%); */
+        /* border: 1px solid hsl(219, 60%, 80.00%); */
       }
 
 
@@ -482,9 +482,9 @@
           <tbody>
             <tr>
               <td
-                 style="direction:ltr;font-size:0px;padding:0;text-align:left;"
+                 style="direction:ltr;font-size:0px;padding:0;padding-left:6px;text-align:left;"
               >
-                <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="vertical-align:top;width:400px;" ><![endif]-->
+                <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="vertical-align:top;width:394px;" ><![endif]-->
             
       <div
          class="mj-column-per-100 mj-outlook-group-fix" style="font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;"
@@ -692,13 +692,13 @@
     
     <!-- Disclaimer -->
       
-      <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="left-align-section-outlook" role="presentation" style="width:400px;" width="400" bgcolor="hsl(35, 94%, 90%)" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
+      <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="left-align-section-outlook" role="presentation" style="width:400px;" width="400" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
     
       
-      <div  class="left-align-section" style="background:hsl(35, 94%, 90%);background-color:hsl(35, 94%, 90%);margin:0px auto;max-width:400px;">
+      <div  class="left-align-section" style="margin:0px auto;max-width:400px;">
         
         <table
-           align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:hsl(35, 94%, 90%);background-color:hsl(35, 94%, 90%);width:100%;"
+           align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="width:100%;"
         >
           <tbody>
             <tr>
